# Agentic-Developer-Scout

./: .gitignore  README.md  main.py  pyproject.toml
advanced-agent/: main.py  pyproject.toml
advanced-agent/src/: firecrawl.py  workflow.py
simple-agent/: main.py  pyproject.toml  requirements.txt
